Fix redraw bugs when using graphics effects in device coordinate mode.

QGraphicsEffect::boundingRectFor() needs the source bounding rect in
device coordinates. This patch fixes the documentation to reflect this,
and fixes some internal usage of boundingRectFor() to ensure it always
gets the device rect of the source.

Task-number: QTBUG-5918
Reviewed-by: Bjørn Erik Nilsen